# multiagent-shopping-assistant

./: .gitignore  GUION_PRESENTACION.md  README.md  app.py  langgraph.config.json  main.py  pyproject.toml  schemas.py  test_classifier.py  test_streamlit.py  validate_config.py
.streamlit/: secrets.toml.example
agents/: __init__.py  intent_classifier.py  mercadona_search.py  price_calculator.py  translator.py
graphs/: shopping_graph.py
tests/: test_mercadona_search.py
utils/: exporter.py
