[tool.poetry]
name = "multiagent-shopping-assistant"
version = "0.1.0"
description = "AI assistant that builds shopping lists with LangGraph agents"
authors = ["Barbarasanchez11 <barbarasanchezurbano@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agents" }, { include = "graphs" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
langgraph = "0.4.8"
langchain = "0.3.25"
langchain-groq = "0.3.2"
httpx = "*"
fpdf = "^1.7"
beautifulsoup4 = "^4.12"
streamlit = "^1.45.1"
pydantic = "2.11.7"
tenacity = "9.1.2"
langsmith = "0.3.45"
langchain-core = "0.3.65"
langgraph-prebuilt = "0.2.2"

[tool.poetry.group.dev.dependencies]
langgraph-cli = { extras = ["inmem"], version = "*" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
